--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="./4geeks.ico" />
+    <title>code excuse</title>
+    <script src="app.js"></script>
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+    <div class="centered-image">
+      <img src="" id="img" />
     </div>
+    <h1>OMG! you wont believe it but..</h1>
+    <h2 id="excuse">My dog ate my homework</h2>
   </body>
 </html>
+<!-- //
+https://www.science.org/do/10.1126/science.aav0458/abs/0808_dogPee_16x9.jpg dog peeing . goes with excuse dog peeing on my home work//
+
+https://t3.ftcdn.net/jpg/02/39/42/00/360_F_239420088_yOXhuDymb8IBbggLrv8j8YZkICw934br.jpg- pic of old lady. 
+https://t3.ftcdn.net/jpg/03/49/32/28/360_F_349322868_pnh7gwrSXKmbCuu6ebDPjUjRi8QQ6uJm.jpg - pic of bird
+https://people.com/thmb/6KHcx7O0J3Gwubg8b_c05YmnWdU=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(999x0:1001x2)/tmnt2-ff-003-2000-e2e7c744347046e8b4de53b25cdd2b00.jpg- ninja turtle
+
+-->
+
+<!-- how to change background color for ever refresh -->
